Add race stage and information view

--- a/src/main/resources/languages/Messages.properties
+++ b/src/main/resources/languages/Messages.properties
@@ -70,9 +70,21 @@ stage.race-setup.field.location.validator.empty=The field "Location" can't be em
 stage.race-setup.field.name.validator.empty=The field "Name" can't be empty
 stage.race-setup.instructions=Please complete the following fields to create a new race\:
 stage.race-setup.title=Create a new race
+stage.race.view.info.description=Description\:
+stage.race.view.info.location=Location\:
+stage.race.view.info.name=Name\:
+stage.race.view.info.value.none=None
+stage.race.view.info.state=State\:
+stage.race.view.info.title=Information about the race
 stage.welcome.button.create=Create a race
 stage.welcome.button.load=Load a race
 stage.welcome.instructions.paragraph.1=Welcome to Smart Race\!
 stage.welcome.instructions.paragraph.2=Please open an instance already existing or create new one.
 stage.welcome.instructions.paragraph.3=You can also open a recent instance from the panel on your left.
 stage.welcome.title=Welcome
+stage.race.dialog.quit.title=Exit the application
+stage.race.dialog.quit.header=Exit the current race
+stage.race.dialog.quit.text=What do you want to do between to exit the application or close the current race?
+stage.race.dialog.quit.button.exit=Exit
+stage.race.dialog.quit.button.close=Close
+stage.race.dialog.quit.button.cancel=Cancel
