--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -70,9 +70,21 @@ stage.race-setup.field.location.validator.empty=Le champ "Lieu" ne peut pas êtr
 stage.race-setup.field.name.validator.empty=Le champ "Nom" ne peut pas être vide
 stage.race-setup.instructions=Veuillez remplir les champs suivants pour créer une nouvelle course \:
 stage.race-setup.title=Créer une nouvelle course
+stage.race.view.info.description=Description \:
+stage.race.view.info.location=Lieu \:
+stage.race.view.info.name=Nom \:
+stage.race.view.info.state=État \:
+stage.race.view.info.title=Informations à propos de la course
+stage.race.view.info.value.none=Aucun(e)
 stage.welcome.button.create=Créer une course
 stage.welcome.button.load=Charger une course
 stage.welcome.instructions.paragraph.1=Bienvenue sur Smart Race\!
 stage.welcome.instructions.paragraph.2=Veuillez ouvrir une instance déjà existante ou en créer une nouvelle.
 stage.welcome.instructions.paragraph.3=Vous pouvez également ouvrir une instance récente dans le panneau de gauche.
 stage.welcome.title=Bienvenue
+stage.race.dialog.quit.title=Quitter l'application
+stage.race.dialog.quit.header=Quitter la course courante
+stage.race.dialog.quit.text=Que voulez-vous faire entre quitter l'application et fermer la course courante?
+stage.race.dialog.quit.button.exit=Quitter
+stage.race.dialog.quit.button.close=Fermer
+stage.race.dialog.quit.button.cancel=Annuler
