Add race track manager

--- a/src/main/resources/languages/Messages.properties
+++ b/src/main/resources/languages/Messages.properties
@@ -88,3 +88,55 @@ stage.race.dialog.quit.text=What do you want to do between to exit the applicati
 stage.race.dialog.quit.button.exit=Exit
 stage.race.dialog.quit.button.close=Close
 stage.race.dialog.quit.button.cancel=Cancel
+stage.race.view.timer.title=Timer(s)
+stage.race.menu.file=File
+stage.race.menu.file.open=Open
+stage.race.menu.file.save=Save
+stage.race.menu.file.close=Close
+stage.race.menu.file.quit=Quit
+stage.race.menu.race=Race
+stage.race.menu.help=Help
+stage.race.menu.race.tracks=Tracks
+stage.race.menu.help.about=About
+stage.race.menu.race.categories=Categories
+model.race-track=Track
+model.race=Race
+model.race-record=Race record
+model.racer=Racer
+stage.race.menu.race.racers=Racers
+model.race.distance-unit=Measure unit for distance
+model.race.distance-unit.0=km (kilometers)
+model.race.distance-unit.1=mi (milles)
+model.race.elevation-unit=Measure unit for elevation
+model.race.elevation-unit.0=m (meters)
+model.race.elevation-unit.1=ft (feets)
+stage.track-manager.title=Track Manager
+stage.track-manager.table.tracks.column.name=Name
+stage.track-manager.table.tracks.column.distance=Distance
+stage.track-manager.table.tracks.column.elevation=Elevation
+stage.track-manager.table.tracks.column.team-size-limit=Team size
+stage.track-manager.button.add=Add
+stage.track-manager.button.view=View
+stage.track-manager.button.edit=Edit
+stage.track-manager.button.delete=Delete
+stage.track-manager.table.value.none=No available track. Please add one.
+stage.set-track.title.create=New track
+stage.set-track.title.edit=Edit the track
+stage.set-track.button.cancel=Cancel
+stage.set-track.button.create=Create
+stage.set-track.button.edit=Edit
+stage.set-track.field.name.validator.empty=The field "Name" can't be empty
+stage.set-track.field.distance.validator.empty=The field "Distance" can't be empty
+stage.set-track.dialog.validator.header=Some fields are empty or incorrect
+stage.set-track.dialog.validator.title=Input problem
+stage.track-manager.dialog.table-selection.title=Selection error
+stage.track-manager.dialog.table-selection.header=This action can't be performed
+stage.track-manager.dialog.table-selection.text=Please select a race track to perform this action.
+stage.set-track.field.distance.validator.number=The value of field "Distance" must be an integer or a decimal number
+stage.set-track.field.elevation.validator.number=The value of field "Elevation" must be an integer or a decimal number
+stage.track-manager.dialog.delete.title=Confirmation request
+stage.track-manager.dialog.delete.header=Delete the selected race track
+stage.track-manager.dialog.delete.text=Are you sure to want to delete the selected race track?
+stage.view-track.button.close=Close
+stage.view-track.value.none=None
+stage.view-track.value.no-available=No available
