--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -88,3 +88,55 @@ stage.race.dialog.quit.text=Que voulez-vous faire entre quitter l'application et
 stage.race.dialog.quit.button.exit=Quitter
 stage.race.dialog.quit.button.close=Fermer
 stage.race.dialog.quit.button.cancel=Annuler
+stage.race.view.timer.title=Chronomètre(s)
+stage.race.menu.file=Fichier
+stage.race.menu.file.open=Ouvrir
+stage.race.menu.file.save=Enregistrer
+stage.race.menu.file.close=Fermer
+stage.race.menu.file.quit=Quitter
+stage.race.menu.race=Course
+stage.race.menu.help=Aide
+stage.race.menu.race.tracks=Parcours
+stage.race.menu.help.about=À propos
+stage.race.menu.race.categories=Catégories
+model.race-track=Parcours
+model.race=Course
+model.race-record=Enregistrement de course
+model.racer=Coureur
+stage.race.menu.race.racers=Coureurs
+model.race.distance-unit=Unité de mesure pour les distances
+model.race.distance-unit.0=km (kilomètres)
+model.race.distance-unit.1=mi (miles)
+model.race.elevation-unit=Unité de mesure pour le dénivelé
+model.race.elevation-unit.0=m (mètres)
+model.race.elevation-unit.1=ft (pieds)
+stage.track-manager.title=Gestionnaire de parcours
+stage.track-manager.table.tracks.column.name=Nom
+stage.track-manager.table.tracks.column.distance=Distance
+stage.track-manager.table.tracks.column.elevation=Dénivelé
+stage.track-manager.table.tracks.column.team-size-limit=Taille de groupe
+stage.track-manager.button.add=Ajouter
+stage.track-manager.button.view=Voir
+stage.track-manager.button.edit=Modifier
+stage.track-manager.button.delete=Supprimer
+stage.track-manager.table.value.none=Aucun parcours disponible. Veuillez en ajouter un.
+stage.set-track.title.create=Nouveau parcours
+stage.set-track.title.edit=Modifier le parcours
+stage.set-track.button.cancel=Annuler
+stage.set-track.button.create=Créer
+stage.set-track.button.edit=Modifier
+stage.set-track.field.name.validator.empty=Le champ "Nom" ne peut être vide
+stage.set-track.field.distance.validator.empty=Le champ "Distance" ne peut être vide
+stage.set-track.dialog.validator.header=Certains champs sont vides ou incorrectes
+stage.set-track.dialog.validator.title=Problème de saisie
+stage.track-manager.dialog.table-selection.title=Erreur de sélection
+stage.track-manager.dialog.table-selection.header=Cette action ne peut pas être effectuée
+stage.track-manager.dialog.table-selection.text=Veuillez sélectionner un parcours pour effectuer cette action.
+stage.set-track.field.distance.validator.number=La valeur du champ "Distance" doit être un entier ou un nombre décimal
+stage.set-track.field.elevation.validator.number=La valeur du champ "Dénivelé" doit être un entier ou un nombre décimal
+stage.track-manager.dialog.delete.title=Demande de confirmation
+stage.track-manager.dialog.delete.header=Supprimer le parcours sélectionné
+stage.track-manager.dialog.delete.text=Êtes-vous sûr de voulour supprimer le parcours sélectionné?
+stage.view-track.button.close=Fermer
+stage.view-track.value.none=Aucune(e)
+stage.view-track.value.no-available=Non disponible
