Add preferences stage

--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -140,3 +140,11 @@ stage.track-manager.dialog.delete.text=Are you sure to want to delete the select
 stage.view-track.button.close=Close
 stage.view-track.value.none=None
 stage.view-track.value.no-available=No available
+stage.preferences.tab.general=General
+stage.preferences.tab.general.field.language=Language
+stage.preferences.tab.general.field.distance-unit=Distance unit
+stage.preferences.tab.general.field.elevation-unit=Elevation unit
+stage.preferences.button.cancel=Cancel
+stage.preferences.button.save=Save
+stage.preferences.title=Preferences
+stage.race.menu.race.preferences=Preferences
