--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -140,3 +140,11 @@ stage.track-manager.dialog.delete.text=Êtes-vous sûr de voulour supprimer le p
 stage.view-track.button.close=Fermer
 stage.view-track.value.none=Aucune(e)
 stage.view-track.value.no-available=Non disponible
+stage.preferences.tab.general=Général
+stage.preferences.tab.general.field.language=Langue
+stage.preferences.tab.general.field.distance-unit=Unité de distance
+stage.preferences.tab.general.field.elevation-unit=Unité de dénivelé
+stage.preferences.button.cancel=Annuler
+stage.preferences.button.save=Enregistrer
+stage.preferences.title=Préferences
+stage.race.menu.race.preferences=Préferences
