Add about stage

--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -148,3 +148,7 @@ stage.preferences.button.cancel=Cancel
 stage.preferences.button.save=Save
 stage.preferences.title=Preferences
 stage.race.menu.race.preferences=Preferences
+stage.about.field.version=Version
+stage.about.field.author=Author
+stage.about.field.repository=Public repository
+stage.about.field.license=License
