--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -148,3 +148,7 @@ stage.preferences.button.cancel=Annuler
 stage.preferences.button.save=Enregistrer
 stage.preferences.title=Préferences
 stage.race.menu.race.preferences=Préferences
+stage.about.field.version=Version
+stage.about.field.author=Auteur
+stage.about.field.repository=Dépôt public
+stage.about.field.license=Licence
