Add license stage

--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -152,3 +152,6 @@ stage.about.field.version=Version
 stage.about.field.author=Auteur
 stage.about.field.repository=Dépôt public
 stage.about.field.license=Licence
+stage.license.title=Licence
+stage.license.button.close=Fermer
+stage.race.menu.help.license=Licence
