--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -152,3 +152,6 @@ stage.about.field.version=Version
 stage.about.field.author=Author
 stage.about.field.repository=Public repository
 stage.about.field.license=License
+stage.license.title=License
+stage.license.button.close=Close
+stage.race.menu.help.license=License
