Add change language stage

--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -155,3 +155,8 @@ stage.about.field.license=License
 stage.license.title=License
 stage.license.button.close=Close
 stage.race.menu.help.license=License
+stage.change-language.title=Change language
+stage.change-language.button.cancel=Cancel
+stage.change-language.button.apply=Apply
+stage.race-setup.dialog.cancel.button.no=No
+stage.race-setup.dialog.cancel.button.yes=Yes
