--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -155,3 +155,8 @@ stage.about.field.license=Licence
 stage.license.title=Licence
 stage.license.button.close=Fermer
 stage.race.menu.help.license=Licence
+stage.change-language.title=Changer la langue
+stage.change-language.button.cancel=Annuler
+stage.change-language.button.apply=Appliquer
+stage.race-setup.dialog.cancel.button.no=Non
+stage.race-setup.dialog.cancel.button.yes=Oui
