Add category manager

--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -45,8 +45,8 @@ model.race.state.0=Setting up
 model.race.state.1=Ready
 model.race.state.2=Running
 model.race.state.3=Finished
-model.racer-category=Description
-model.racer-category.name=Name
+model.race-category.description=Description
+model.race-category.name=Name
 model.racer-team.name=Name
 model.racer.birthday-date=Birthday date
 model.racer.comments=Comments
@@ -160,3 +160,28 @@ stage.change-language.button.cancel=Cancel
 stage.change-language.button.apply=Apply
 stage.race-setup.dialog.cancel.button.no=No
 stage.race-setup.dialog.cancel.button.yes=Yes
+stage.category-manager.title=Category manager
+stage.category-manager.table.categories.column.name=Name
+stage.category-manager.table.categories.column.description=Description
+stage.category-manager.button.add=Add
+stage.category-manager.button.edit=Edit
+stage.category-manager.button.delete=Delete
+stage.category-manager.table.value.none=No available category. Please add one.
+stage.category-manager.dialog.table-selection.title=Selection error
+stage.category-manager.dialog.table-selection.header=This action can't be performed
+stage.category-manager.dialog.table-selection.text=Please select a race category to perform this action.
+stage.set-category.title.create=New category
+stage.set-category.title.edit=Edit the category
+stage.set-category.button.cancel=Cancel
+stage.set-category.field.name.validator.empty=The field "Name" can't be empty
+stage.set-category.dialog.validator.title=Input problem
+stage.set-category.dialog.validator.header=Some fields are empty or incorrect
+stage.set-category.button.create=Create
+stage.set-category.button.edit=Edit
+stage.track-manager.dialog.delete.button.cancel=Cancel
+stage.track-manager.dialog.delete.button.yes=Yes
+stage.category-manager.dialog.delete.title=Confirmation request
+stage.category-manager.dialog.delete.header=Delete the selected race category
+stage.category-manager.dialog.delete.text=Are you sure to want to delete the selected race category?
+stage.category-manager.dialog.delete.button.cancel=Cancel
+stage.category-manager.dialog.delete.button.yes=Yes
