--- a/src/main/resources/languages/Messages_fr.properties
+++ b/src/main/resources/languages/Messages_fr.properties
@@ -45,8 +45,8 @@ model.race.state.0=Mise en place
 model.race.state.1=Prêt
 model.race.state.2=En cours
 model.race.state.3=Terminé
-model.racer-category=Description
-model.racer-category.name=Nom
+model.race-category.description=Description
+model.race-category.name=Nom
 model.racer-team.name=Nom
 model.racer.birthday-date=Date de naissance
 model.racer.comments=Remarques
@@ -160,3 +160,28 @@ stage.change-language.button.cancel=Annuler
 stage.change-language.button.apply=Appliquer
 stage.race-setup.dialog.cancel.button.no=Non
 stage.race-setup.dialog.cancel.button.yes=Oui
+stage.category-manager.title=Gestionnaire de catégories
+stage.category-manager.table.categories.column.name=Nom
+stage.category-manager.table.categories.column.description=Description
+stage.category-manager.button.add=Ajouter
+stage.category-manager.button.edit=Modifier
+stage.category-manager.button.delete=Supprimer
+stage.category-manager.table.value.none=Aucune catégorie disponible. Veuillez en ajouter une.
+stage.category-manager.dialog.table-selection.title=Erreur de sélection
+stage.category-manager.dialog.table-selection.header=Cette action ne peut pas être effectuée
+stage.category-manager.dialog.table-selection.text=Veuillez sélectionner une catégorie pour effectuer cette action.
+stage.set-category.title.create=Nouvelle catégorie
+stage.set-category.title.edit=Modifier la catégorie
+stage.set-category.button.cancel=Annuler
+stage.set-category.field.name.validator.empty=Le champ "Nom" ne peut être vide
+stage.set-category.dialog.validator.title=Problème de saisie
+stage.set-category.dialog.validator.header=Certains champs sont vides ou incorrectes
+stage.set-category.button.create=Créer
+stage.set-category.button.edit=Modifier
+stage.track-manager.dialog.delete.button.cancel=Annuler
+stage.track-manager.dialog.delete.button.yes=Oui
+stage.category-manager.dialog.delete.title=Demande de confirmation
+stage.category-manager.dialog.delete.header=Supprimer la catégorie sélectionnée
+stage.category-manager.dialog.delete.text=Êtes-vous sûr de vouloir supprimer la catégorie sélectionnée?
+stage.category-manager.dialog.delete.button.cancel=Annuler
+stage.category-manager.dialog.delete.button.yes=Oui
