Straight-forward refactoring

--- a/src/main/resources/languages/Messages_en.properties
+++ b/src/main/resources/languages/Messages_en.properties
@@ -63,7 +63,7 @@ stage.race-setup.dialog.cancel.text=Are you sure to cancel the creation race pro
 stage.race-setup.dialog.cancel.title=Cancel the creation
 stage.race-setup.dialog.filechooser.title=Choose a file for the race
 stage.race-setup.dialog.validator.header=Some fields are empty or incorrect
-stage.race-setup.dialog.validator.title=Input problem
+stage.race-setup.dialog.validator.title=Form validation
 stage.race-setup.field.file.label=File
 stage.race-setup.field.file.validator.empty=The field "File" can't be empty
 stage.race-setup.field.location.validator.empty=The field "Location" can't be empty
@@ -82,9 +82,9 @@ stage.welcome.instructions.paragraph.1=Welcome to Smart Race\!
 stage.welcome.instructions.paragraph.2=Please open an instance already existing or create new one.
 stage.welcome.instructions.paragraph.3=You can also open a recent instance from the panel on your left.
 stage.welcome.title=Welcome
-stage.race.dialog.quit.title=Exit the application
-stage.race.dialog.quit.header=Exit the current race
-stage.race.dialog.quit.text=What do you want to do between to exit the application or close the current race?
+stage.race.dialog.quit.title=Quit race
+stage.race.dialog.quit.header=Quit the current race
+stage.race.dialog.quit.text=What do you want to do between closing the current race or exiting the application?
 stage.race.dialog.quit.button.exit=Exit
 stage.race.dialog.quit.button.close=Close
 stage.race.dialog.quit.button.cancel=Cancel
@@ -150,7 +150,7 @@ stage.preferences.title=Preferences
 stage.race.menu.race.preferences=Preferences
 stage.about.field.version=Version
 stage.about.field.author=Author
-stage.about.field.repository=Public repository
+stage.about.field.repository=Repository
 stage.about.field.license=License
 stage.license.title=License
 stage.license.button.close=Close
@@ -185,3 +185,5 @@ stage.category-manager.dialog.delete.header=Delete the selected race category
 stage.category-manager.dialog.delete.text=Are you sure to want to delete the selected race category?
 stage.category-manager.dialog.delete.button.cancel=Cancel
 stage.category-manager.dialog.delete.button.yes=Yes
+language.en=English
+language.fr=French
